force-app/main/default/objects/SBQQ__ProductOption__c/fields/Compactor_Size__c.field-meta.xml
<CustomField>
    <fullName>Compactor_Size__c</fullName>
    <label>Compactor Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compactor_Size</valueSetName>
    </valueSet>
</CustomField>