force-app/main/default/objects/SBQQ__ProductOption__c/fields/Compactor_Type__c.field-meta.xml
<CustomField>
    <fullName>Compactor_Type__c</fullName>
    <label>Compactor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Compactor_Type</valueSetName>
    </valueSet>
</CustomField>