force-app/main/default/objects/SBQQ__ProductOption__c/fields/Cost_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Cost_Unit_of_Measure__c</fullName>
    <label>Cost Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measurements</valueSetName>
    </valueSet>
</CustomField>