force-app/main/default/objects/SBQQ__ProductOption__c/fields/CostModelType__c.field-meta.xml
<CustomField>
    <fullName>CostModelType__c</fullName>
    <label>CostModelType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cost_Price_Model_Types</valueSetName>
    </valueSet>
</CustomField>