force-app/main/default/objects/SBQQ__ProductOption__c/fields/Description_of_Waste__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Waste__c</fullName>
    <label>Description of Waste</label>
    <type>TextArea</type>
</CustomField>