force-app/main/default/objects/SBQQ__ProductOption__c/fields/Equipment_Side_Doors__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Side_Doors__c</fullName>
    <label>Equipment Side Doors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>