force-app/main/default/objects/SBQQ__ProductOption__c/fields/Equipment_Size__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Size__c</fullName>
    <label>Equipment Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Quote_Equipment_Sizes</valueSetName>
    </valueSet>
</CustomField>