force-app/main/default/objects/SBQQ__ProductOption__c/fields/Occurrence_Type__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_Type__c</fullName>
    <label>Occurrence Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Occurrence_Type</valueSetName>
    </valueSet>
</CustomField>