force-app/main/default/objects/SBQQ__ProductOption__c/fields/PriceUOM__c.field-meta.xml
<CustomField>
    <fullName>PriceUOM__c</fullName>
    <label>PriceUOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measurements</valueSetName>
    </valueSet>
</CustomField>