force-app/main/default/objects/SBQQ__ProductOption__c/fields/Primary_Service_Component__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Service Component</label>
    <type>Checkbox</type>
</CustomField>