force-app/main/default/objects/SBQQ__ProductOption__c/fields/Schedule_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Frequency__c</fullName>
    <label>Schedule Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Schedule_Frequency</valueSetName>
    </valueSet>
</CustomField>