force-app/main/default/objects/SBQQ__ProductOption__c/fields/Service_Days__c.field-meta.xml
<CustomField>
    <fullName>Service_Days__c</fullName>
    <label>Service Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_Week</valueSetName>
    </valueSet>
</CustomField>