force-app/main/default/objects/SBQQ__ProductOption__c/fields/Service_Style__c.field-meta.xml
<CustomField>
    <fullName>Service_Style__c</fullName>
    <label>Service Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Style</valueSetName>
    </valueSet>
</CustomField>