force-app/main/default/objects/SBQQ__ProductOption__c/fields/Toter_Size__c.field-meta.xml
<CustomField>
    <fullName>Toter_Size__c</fullName>
    <label>Toter Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Toter_Size</valueSetName>
    </valueSet>
</CustomField>