force-app/main/default/objects/SBQQ__ProductOption__c/fields/Type_Of_Lid__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Lid__c</fullName>
    <label>Type Of Lid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>