force-app/main/default/objects/SBQQ__ProductOption__c/fields/Understructure__c.field-meta.xml
<CustomField>
    <fullName>Understructure__c</fullName>
    <label>Understructure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Understructure</valueSetName>
    </valueSet>
</CustomField>