force-app/main/default/objects/SBQQ__ProductOption__c/validationRules/Product_Code_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Code_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(SBQQ__OptionalSKU__r.ProductCode)</errorConditionFormula>
    <errorMessage>Only product options with valid product codes should be used.</errorMessage>
</ValidationRule>