force-app/main/default/objects/SBQQ__ProductOption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SBQQ__ProductName__c</columns>
    <columns>SBQQ__ConfiguredSKU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SBQQ__ConfiguredSKU__c</field>
        <operation>equals</operation>
        <value>Dumpster</value>
    </filters>
    <label>All</label>
</ListView>